Changes to work under https

--- a/projectileLab.html
+++ b/projectileLab.html
@@ -121,7 +121,7 @@
     <div id="canvas"></div>
     <br />To comment on this lab or file a bug report, contact <a href="mailto:leedanilek@hanovernorwichschools.org">Lee Danilek</a>
 </body>
-		<script type="text/javascript" 	src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+		<script type="text/javascript" 	src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
         <script type="text/javascript" src="three.min.js"></script>
     
     <script type="text/javascript" src="three.js"></script>
