--- a/keplerLab.html
+++ b/keplerLab.html
@@ -146,7 +146,7 @@
     <div id="canvas" style="border:1px solid white"></div>
     <div class="noPrint">To comment on this lab or file a bug report, contact <a href="mailto:leedanilek@hanovernorwichschools.org">Lee Danilek</a></div>
 </body>
-		<script type="text/javascript" 	src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+		<script type="text/javascript" 	src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
         <script type="text/javascript" src="three.min.js"></script>
     
     <script type="text/javascript" src="three.js"></script>
