--- a/newtonLab.html
+++ b/newtonLab.html
@@ -44,7 +44,7 @@
     
     <br />To comment on this lab or file a bug report, contact <a href="mailto:leedanilek@hanovernorwichschools.org">Lee Danilek</a>
 </body>
-		<script type="text/javascript" 	src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+		<script type="text/javascript" 	src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
         <script type="text/javascript" src="three.min.js"></script>
     
     <script type="text/javascript" src="three.js"></script>
