--- a/newtonLab.html
+++ b/newtonLab.html
@@ -49,7 +49,7 @@
     
     <script type="text/javascript" src="three.js"></script>
     
-    <script type="text/javascript" scr="equation.js"></script>
+    <script type="text/javascript" src="equation.js"></script>
     <script type="text/javascript" src="helvetiker_regular.typeface.js"></script>
     <script type="text/javascript" src="THREEx.WindowResize.js"></script>
 		<script type="text/javascript" src="OrbitControls.js"></script>	
